@@ -1,3 +1,9 @@
+2003-11-12  Jason Merrill  <jason@redhat.com>
+
+	PR optimization/12547
+	* lang.c (java_tree_inlining_walk_subtrees): Just walk
+	BLOCK_EXPR_BODY directly.
+
 2003-10-24  David S. Miller  <davem@redhat.com>
 
 	* jcf-parse.c (jcf_parse): Fix args to fatal_error().
